...
        progressButton.startImage = UIImage(systemName: "icloud.and.arrow.down")
        progressButton.successImage = UIImage(systemName: "checkmark.circle.fill")
        progressButton.strokeDynamic = true
        progressButton.tintColor = .systemBlue
        progressButton.colorCanceled = .systemBlue
        progressButton.isUserInteractionEnabled = false
        progressButton.accessibilityIdentifier = "com.myapp.DownloadButtonView.progressButton"
        
        
        addSubview(progressButton)
        
        NSLayoutConstraint.activate([
            progressButton.centerXAnchor.constraint(equalTo: centerXAnchor),
...
    }
    
    private func configureLabel() {
        statusLabel.translatesAutoresizingMaskIntoConstraints = false
        statusLabel.textColor = .systemBlue
        statusLabel.text = "Download"
        statusLabel.accessibilityIdentifier = "com.myapp.DownloadButtonView.statusLabel"
        
        addSubview(statusLabel)
        NSLayoutConstraint.activate([
            statusLabel.centerYAnchor.constraint(equalTo: centerYAnchor),
            statusLabel.trailingAnchor.constraint(equalTo: trailingAnchor),
            statusLabel.leadingAnchor.constraint(equalTo: progressButton.trailingAnchor, constant: 8)
...
